--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Megalook Dashboard</title>
+		<title>Megalook Dashboard000</title>
 
 		<!--favicon -->
 		<link rel="icon" href="https://www.spruko.com/demo/kharna/favicon.ico" type="image/x-icon"/>
